# xaoc2

./: pyproject.toml  readme.md  setting.json
src/: main.py
src/cogs/: 4image_fish.py  admin.py  discord_invite.py  honeypot.py  member_join.py  phishing_detector.py  quarantine.py  spam_detector.py  user_install_spam.py
src/core/: heat_system.py  server_cache.py  setting.py
